prevent "jumping" when content doesn't fill the page

--- a/src/scss/framework/_reset.scss
+++ b/src/scss/framework/_reset.scss
@@ -4,7 +4,7 @@
 html {
 	font-size: 100%;
 	height: 100%;
-	overflow-y: auto;
+	overflow-y: scroll;			// scroll to prevent "jumping" when switching to tabs with fewer content
 	-webkit-text-size-adjust: 100%;
 	-ms-text-size-adjust: 100%;
 }
